--- a/src/scss/components/_leader.scss
+++ b/src/scss/components/_leader.scss
@@ -112,6 +112,8 @@
     }
 
     &__button2 {
-        display: none;
+        // display: none;
+        margin-top: 64px;
+        width: 270px;
     }
 }
