--- a/src/views/_includes/blocks/bonuses.pug
+++ b/src/views/_includes/blocks/bonuses.pug
@@ -5,7 +5,7 @@ section.bonuses
     .swiper-container.bonuses__swiper-container
       .swiper-wrapper.bonuses__swiper-wrapper
         .swiper-slide.bonuses__swiper-slide
-          .bonuses__card.bonuses__card
+          a(href='#').bonuses__card.bonuses__card
             picture.bonuses__card-img.bg-image
               source(media="(min-width: 768px)", srcset="assets/img/bonuses/ascona-md.webp", type="image/webp")
               source(media="(min-width: 768px)", srcset="assets/img/bonuses/ascona-md.jpg", type="image/jpg")
@@ -17,7 +17,7 @@ section.bonuses
             p.bonuses__card-text Столешница в подарок
         
         .swiper-slide.bonuses__swiper-slide
-          .bonuses__card.bonuses__card--light
+          a(href='#').bonuses__card.bonuses__card--light
             picture.bonuses__card-img.bg-image
               source(media="(min-width: 768px)", srcset="assets/img/bonuses/certificate-md.webp", type="image/webp")
               source(media="(min-width: 768px)", srcset="assets/img/bonuses/certificate-md.jpg", type="image/jpg")
@@ -29,7 +29,7 @@ section.bonuses
             img(src="assets/img/bonuses/certificate-label.png", alt="certificate-label").bonuses__card-label
 
         .swiper-slide.bonuses__swiper-slide
-          .bonuses__card.bonuses__card--light
+          a(href='#').bonuses__card.bonuses__card--light
             picture.bonuses__card-img.bg-image
               source(media="(min-width: 768px)", srcset="assets/img/bonuses/discount-md.webp", type="image/webp")
               source(media="(min-width: 768px)", srcset="assets/img/bonuses/discount-md.jpg", type="image/jpg")
