--- a/src/views/_includes/blocks/contactUs.pug
+++ b/src/views/_includes/blocks/contactUs.pug
@@ -14,6 +14,6 @@ section.contactUs
       .mainForm__input-group
         input(type="text", placeholder="Ваше имя").mainForm__input.contactUs__input
         input(type="phone", placeholder="Ваш телефон").mainForm__input.contactUs__input
-      button.mainForm__button.button.button--dark.contactUs__button Отправить
+      button.mainForm__button.button.button--primary.contactUs__button Отправить
   p.policy.contactUs__policy Отправляя контакты, вы соглашаетесь с <a href="#">политикой конфиденциальности</a>
     
