--- a/src/views/_includes/blocks/leader.pug
+++ b/src/views/_includes/blocks/leader.pug
@@ -18,7 +18,7 @@ section.leader
       .leader__info-sign
     .leader__block
       .title.leader__title Кухни на заказ в&nbsp;салонах Кухнисити
-      .leader__text Кухня – одно из самых важных помещений в доме. Здесь готовят еду, устраивают семейные обеды, дружеские посиделки, а&nbsp;порой и званые вечера. Отсюда вытекают главные критерии выбора мебели – материалы и фурнитура (от покрытия столешницы и заканчивая ручками на фасадах) должны быть готовы к интенсивным нагрузкам,  а продуманная планировка должна помогать выполнять бытовые дела с легкостью, комфортом и удовольствием. А еще хочется, чтобы было красиво!
+      .leader__text Кухня – одно из самых важных помещений в доме. Здесь готовят еду, устраивают семейные обеды, дружеские посиделки, а&nbsp;порой и званые вечера. Отсюда вытекают главные критерии выбора мебели – материалы и фурнитура (от покрытия столешницы и заканчивая ручками на фасадах) должны быть готовы к интенсивным нагрузкам,  а продуманная планировка должна помогать выполнять бытовые дела с легкостью, комфортом и удовольствием. А&nbsp;еще хочется, чтобы было красиво!
       .leader__text.leader__text-expand  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius, obcaecati pariatur. Unde quas aspernatur sit, placeat repellendus iusto vitae excepturi.                    
       .leader__button раскрыть
       .leader__button2.button.button--dark написать директору
