--- a/src/views/_includes/blocks/social.pug
+++ b/src/views/_includes/blocks/social.pug
@@ -1,23 +1,23 @@
-.social
+.social.main-social
   .container.social__container
     h2.title.social__title КухниСити в соцсетях
     p.social__description Новые модели, выгодные акции и неожиданные дизайнерские решения ежедневно в удобном для&nbsp;вас&nbsp;формате.&nbsp;Подписывайтесь!
     h2.social__subtitle Подписывайтесь на нас
     .social__block
       a(href="#").social__block-link
-        img(src="assets/img/social/facebook.svg", alt="facebook")
+        img(src="assets/img/social/facebook.svg", alt="facebook").social__block-img
       a(href="#").social__block-link
-        img(src="assets/img/social/vk.svg", alt="vk")
+        img(src="assets/img/social/vk.svg", alt="vk").social__block-img
       a(href="#").social__block-link
-        img(src="assets/img/social/instagram.svg", alt="instagram")
+        img(src="assets/img/social/instagram.svg", alt="instagram").social__block-img
       a(href="#").social__block-link
-        img(src="assets/img/social/odnoklasniki.svg", alt="odnoklasniki")
+        img(src="assets/img/social/odnoklasniki.svg", alt="odnoklasniki").social__block-img
       a(href="#").social__block-link
-        img(src="assets/img/social/pinterest.svg", alt="pinterest")
+        img(src="assets/img/social/pinterest.svg", alt="pinterest").social__block-img
       a(href="#").social__block-link
-        img(src="assets/img/social/twitter.svg", alt="twitter")
+        img(src="assets/img/social/twitter.svg", alt="twitter").social__block-img
       a(href="#").social__block-link
-        img(src="assets/img/social/youtube.svg", alt="youtube")
+        img(src="assets/img/social/youtube.svg", alt="youtube").social__block-img
 
   .swiper-contaner.social__swiper-container
     .swiper-wrapper.social__swiper-wrapper 
