--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,5 +1,10 @@
 .header {
     font-size: 14px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    width: 100%;
 
     &__container {
         display: flex;
@@ -9,7 +14,7 @@
 
     &__expand {
         position: absolute;
-        z-index: 100000;
+        z-index: 500;
         top: 68px;
         left: 0;
         width: 100%;
@@ -26,11 +31,48 @@
         /* identical to box height, or 22px */
         letter-spacing: -0.02em;
         display: flex;
-        // justify-content: center;
+        justify-content: space-between;
         align-items: center;
         position: relative;
         cursor: pointer;
         // z-index: 100;
+
+        &-selected {
+            z-index: 200;
+        }
+
+        &--active {
+            .header__location-block {
+                transition: max-height 0.2s ease-in-out;
+                padding-bottom: 10px;
+            }
+
+            &::after {
+                transform: rotate(180deg);
+            }
+        }
+
+        &-block {
+            position: absolute;
+            width: 110%;
+            left: -5%;
+            z-index: 100;
+            padding-left: 15px;
+            background-color: #fff;
+            max-height: 0;
+            overflow: hidden;
+        }
+
+        &-option {
+            font-size: 12px;
+            line-height: 246.5%;
+            letter-spacing: 0.035em;
+            color: #A0A0A0;
+
+            &:nth-child(1) {
+                margin-top: 120px;
+            }
+        }
 
         &::before {
             content: '';
@@ -75,17 +117,12 @@
             flex-shrink: 0;
         }
 
-        &--selected {
-            z-index: 10000;
-        }
 
-        &--option {
-            color: #A0A0A0;
-        }
     }
 
     &__block {
         padding: 20px 0;
+        background-color: #fff;
 
         &-open {
             text-transform: uppercase;
@@ -167,7 +204,7 @@
             display: flex;
             flex-direction: column;
             padding-left: 20px;
-            z-index: 100;
+            z-index: 501;
             background-color: #fff;
             max-height: 0;
             overflow: hidden;
@@ -247,8 +284,9 @@
     .header__about {
         &-menu {
             // max-height: 210px;
-            min-height: 210px;
+            // min-height: 210px;
             opacity: 1;
+            padding-bottom: 10px;
         }
 
     }
@@ -261,26 +299,6 @@
     }
 }
 
-.header__location--active {
-    background-color: #fff;
-
-    .header__location {
-        &-menu {
-            // max-height: 210px;
-            // min-height: 210px;
-            max-height: 100px;
-            opacity: 1;
-            padding-top: 54px;
-        }
-
-
-    }
-
-    &::after {
-        transform: rotate(180deg) !important;
-        // display: none !important;
-    }
-}
 
 .expand {
     display: none;
