--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -2,7 +2,7 @@
     background: url('../img/hero/hero-bg-lg.webp') 59% 31%/ cover;
     height: 910px;
     position: relative;
-    max-width: 1920px;
+    max-width: 100%;
     margin-left: auto;
     margin-right: auto;
 
