--- a/src/scss/components/_models.scss
+++ b/src/scss/components/_models.scss
@@ -5,7 +5,7 @@
 
     &__swiper-slide {
         // margin-right: 33px;
-        width: 1400px !important;
+        width: 1200px !important;
         margin-bottom: 72px;
         // cursor: pointer;
     }
@@ -62,6 +62,12 @@
 
         &-subtitle {
             display: none;
+        }
+
+        &-text {
+            &::after {
+                transition: transform 0.1s ease-in-out, margin-left 0.1s ease-in-out;
+            }
         }
     }
 
@@ -160,6 +166,7 @@
     }
 
     &__hover {
+        display: none;
         position: absolute;
         width: 100%;
         height: 100%;
@@ -244,6 +251,7 @@
                 transition: opacity 0.2s ease-in-out;
             }
         }
+
     }
 
 
