--- a/src/scss/components/_production.scss
+++ b/src/scss/components/_production.scss
@@ -14,6 +14,10 @@
         margin-bottom: 10px;
         overflow: hidden;
 
+        &-list {
+            display: none;
+        }
+
         &::after {
             background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%);
             @include background-dimm();
@@ -42,7 +46,7 @@
         }
 
         &__list {
-            display: block;
+            display: none;
         }
     }
 }
