--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -76,8 +76,8 @@
 
         &::before {
             content: '';
-            width: 7px;
-            height: 7px;
+            min-width: 7px;
+            min-height: 7px;
             border-radius: 50%;
             background-color: $color-red;
             margin-right: 6px;
@@ -87,8 +87,8 @@
 
         &::after {
             content: '';
-            width: 8px;
-            height: 4px;
+            min-width: 8px;
+            min-height: 4px;
             background: url('../img/expand-arrow.svg') no-repeat center / cover;
             margin-left: 6px;
             display: inline-block;
