--- a/src/scss/components/catalog/_filter.scss
+++ b/src/scss/components/catalog/_filter.scss
@@ -128,6 +128,7 @@
         }
 
         &-list {
+            cursor: default;
             display: flex;
             flex-direction: column;
             align-items: flex-start;
