--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -33,6 +33,10 @@
         padding-left: 25px;
         padding-right: 25px;
         // margin-top: 80px;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 
     &__title {
