--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -25,6 +25,7 @@
 @import "components/benefits";
 @import "components/catalog/catalog-leader";
 @import "components/social";
+@import "components/contactUs";
 @import "components/footer";
 
 
