--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -1129,6 +1129,8 @@
             order: 2;
             justify-content: center;
             margin-top: -80px;
+            position: absolute;
+            right: 0;
 
             &-img {
                 height: 594px;
