--- a/src/scss/components/catalog/_catalog-media.scss
+++ b/src/scss/components/catalog/_catalog-media.scss
@@ -28,6 +28,7 @@
 
             &__info {
                 margin-bottom: 87px;
+                position: static;
 
                 &-name {
                     letter-spacing: 0.07em;
