--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -3624,6 +3624,7 @@
         &__container {
             max-width: 1920px;
             padding-left: 158px;
+            padding-bottom: 300px;
         }
 
         &__info {
@@ -3665,7 +3666,7 @@
             padding: 23px 52px;
             // margin-top: 54px;
             position: absolute;
-            bottom: 47px;
+            bottom: -135px;
         }
 
     }
