--- a/src/views/_includes/blocks/catalogModels2.pug
+++ b/src/views/_includes/blocks/catalogModels2.pug
@@ -1,4 +1,4 @@
-section.catalogModels
+section.catalogModels.catalogModels2
   .container.models__container2
     .card.card--wide
       .card__img
