--- a/src/views/_includes/blocks/designers.pug
+++ b/src/views/_includes/blocks/designers.pug
@@ -11,4 +11,4 @@ section.designers
         source(media="(min-width: 320px)", srcset="assets/img/designers/designers.png", type="image/png")
         img(src="assets/img/designers/designers-xl.png", alt="designers-img")
     p.designers__description 150 дизайнеров-архитекторов ежедневно создают пространства индивидуально под каждого клиента. Получите бесплатный дизайн-проект под ваши предпочтения.  
-    button.button.button--dark.designers__button Бесплатный дизайн-проект
+    button.button.button--primary.designers__button Бесплатный дизайн-проект
