--- a/src/views/_includes/blocks/catalogModels.pug
+++ b/src/views/_includes/blocks/catalogModels.pug
@@ -4,7 +4,20 @@ section.catalogModels
       .card__img
         .card__hover
           .card__hover-block
-            .button.card__hover-button.button--primary Подробнее
+            a(href="#").card__hover-calculator
+            .card__hover-group 
+              h3.card__hover-title Фасад 
+              p.card__hover-description рамки из массива ясеня с панелью из МДФ, покрытой шпоном
+            .card__hover-group
+              h3.card__hover-title Толщина фасада
+              p.card__hover-description 19 мм
+            .card__hover-group
+              h3.card__hover-title Виды фасадов  
+              p.card__hover-description глухой, стекло
+            .card__hover-group
+              h3.card__hover-title Отделка   
+              p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
+            .button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/1.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/1.jpg", type="image/webp")
@@ -19,7 +32,20 @@ section.catalogModels
       .card__img
         .card__hover
           .card__hover-block
-            .button.card__hover-button.button--primary Подробнее
+            a(href="#").card__hover-calculator
+            .card__hover-group 
+              h3.card__hover-title Фасад 
+              p.card__hover-description рамки из массива ясеня с панелью из МДФ, покрытой шпоном
+            .card__hover-group
+              h3.card__hover-title Толщина фасада
+              p.card__hover-description 19 мм
+            .card__hover-group
+              h3.card__hover-title Виды фасадов  
+              p.card__hover-description глухой, стекло
+            .card__hover-group
+              h3.card__hover-title Отделка   
+              p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
+            .button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/2.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/2.jpg", type="image/webp")
@@ -34,7 +60,20 @@ section.catalogModels
       .card__img
         .card__hover
           .card__hover-block
-           .button.card__hover-button.button--primary Подробнее
+            a(href="#").card__hover-calculator
+            .card__hover-group 
+              h3.card__hover-title Фасад 
+              p.card__hover-description рамки из массива ясеня с панелью из МДФ, покрытой шпоном
+            .card__hover-group
+              h3.card__hover-title Толщина фасада
+              p.card__hover-description 19 мм
+            .card__hover-group
+              h3.card__hover-title Виды фасадов  
+              p.card__hover-description глухой, стекло
+            .card__hover-group
+              h3.card__hover-title Отделка   
+              p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
+            .button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/3.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/3.jpg", type="image/webp")
@@ -49,7 +88,20 @@ section.catalogModels
       .card__img
         .card__hover
           .card__hover-block
-           .button.card__hover-button.button--primary Подробнее
+            a(href="#").card__hover-calculator
+            .card__hover-group 
+              h3.card__hover-title Фасад 
+              p.card__hover-description рамки из массива ясеня с панелью из МДФ, покрытой шпоном
+            .card__hover-group
+              h3.card__hover-title Толщина фасада
+              p.card__hover-description 19 мм
+            .card__hover-group
+              h3.card__hover-title Виды фасадов  
+              p.card__hover-description глухой, стекло
+            .card__hover-group
+              h3.card__hover-title Отделка   
+              p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
+            .button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/4.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/4.jpg", type="image/webp")
@@ -64,7 +116,20 @@ section.catalogModels
       .card__img
         .card__hover
           .card__hover-block
-            .button.card__hover-button.button--primary Подробнее
+            a(href="#").card__hover-calculator
+            .card__hover-group 
+              h3.card__hover-title Фасад 
+              p.card__hover-description рамки из массива ясеня с панелью из МДФ, покрытой шпоном
+            .card__hover-group
+              h3.card__hover-title Толщина фасада
+              p.card__hover-description 19 мм
+            .card__hover-group
+              h3.card__hover-title Виды фасадов  
+              p.card__hover-description глухой, стекло
+            .card__hover-group
+              h3.card__hover-title Отделка   
+              p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
+            .button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/5.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/5.jpg", type="image/webp")
@@ -79,7 +144,20 @@ section.catalogModels
       .card__img
         .card__hover
           .card__hover-block
-           .button.card__hover-button.button--primary Подробнее
+            a(href="#").card__hover-calculator
+            .card__hover-group 
+              h3.card__hover-title Фасад 
+              p.card__hover-description рамки из массива ясеня с панелью из МДФ, покрытой шпоном
+            .card__hover-group
+              h3.card__hover-title Толщина фасада
+              p.card__hover-description 19 мм
+            .card__hover-group
+              h3.card__hover-title Виды фасадов  
+              p.card__hover-description глухой, стекло
+            .card__hover-group
+              h3.card__hover-title Отделка   
+              p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
+            .button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/1.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/1.jpg", type="image/webp")
@@ -89,7 +167,6 @@ section.catalogModels
         span.card__info-name Bristel PRO
         span.card__info-price от 40 215 ₽/м²
       p.card__description Роскошная дворцовая классика
-
       
 
     
