--- a/src/views/_includes/blocks/catalogModels2.pug
+++ b/src/views/_includes/blocks/catalogModels2.pug
@@ -4,14 +4,24 @@ section.catalogModels.catalogModels2
       .card__img
         .card__hover
           .card__hover-block
-            .button.card__hover-button.button--primary Подробнее
+            a(href="#").card__hover-calculator
+            .card__hover-group 
+              h3.card__hover-title Фасад 
+              p.card__hover-description рамки из массива ясеня с панелью из МДФ, покрытой шпоном
+            .card__hover-group
+              h3.card__hover-title Толщина фасада
+              p.card__hover-description 19 мм
+            .card__hover-group
+              h3.card__hover-title Виды фасадов  
+              p.card__hover-description глухой, стекло
+            .card__hover-group
+              h3.card__hover-title Отделка   
+              p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
+            .button.card__hover-button.button--primary Посмотреть подробности
         picture
-            source(media="(min-width: 1920px)", srcset="assets/img/models/kitchen-wide.webp", type="image/webp")
-            source(media="(min-width: 1920px)", srcset="assets/img/models/kitchen-wide.jpg", type="image/webp")
-            source(media="(min-width: 320px)", srcset="assets/img/models/1.webp", type="image/webp")
-            source(media="(min-width: 320px)", srcset="assets/img/models/1.jpg", type="image/webp")
-            img(src="assets/img/models/kitchen-wide.jpg")
-
+          source(media="(min-width: 320px)", srcset="assets/img/models/1.webp", type="image/webp")
+          source(media="(min-width: 320px)", srcset="assets/img/models/1.jpg", type="image/webp")
+          img(src="assets/img/models/1.jpg")
         .card__label.card__label--sale 
       .card__info
         span.card__info-name Bristel PRO
@@ -22,7 +32,20 @@ section.catalogModels.catalogModels2
       .card__img
         .card__hover
           .card__hover-block
-            .button.card__hover-button.button--primary Подробнее
+            a(href="#").card__hover-calculator
+            .card__hover-group 
+              h3.card__hover-title Фасад 
+              p.card__hover-description рамки из массива ясеня с панелью из МДФ, покрытой шпоном
+            .card__hover-group
+              h3.card__hover-title Толщина фасада
+              p.card__hover-description 19 мм
+            .card__hover-group
+              h3.card__hover-title Виды фасадов  
+              p.card__hover-description глухой, стекло
+            .card__hover-group
+              h3.card__hover-title Отделка   
+              p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
+            .button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/2.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/2.jpg", type="image/webp")
@@ -37,7 +60,20 @@ section.catalogModels.catalogModels2
       .card__img
         .card__hover
           .card__hover-block
-           .button.card__hover-button.button--primary Подробнее
+            a(href="#").card__hover-calculator
+            .card__hover-group 
+              h3.card__hover-title Фасад 
+              p.card__hover-description рамки из массива ясеня с панелью из МДФ, покрытой шпоном
+            .card__hover-group
+              h3.card__hover-title Толщина фасада
+              p.card__hover-description 19 мм
+            .card__hover-group
+              h3.card__hover-title Виды фасадов  
+              p.card__hover-description глухой, стекло
+            .card__hover-group
+              h3.card__hover-title Отделка   
+              p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
+            .button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/3.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/3.jpg", type="image/webp")
@@ -52,7 +88,20 @@ section.catalogModels.catalogModels2
       .card__img
         .card__hover
           .card__hover-block
-           .button.card__hover-button.button--primary Подробнее
+            a(href="#").card__hover-calculator
+            .card__hover-group 
+              h3.card__hover-title Фасад 
+              p.card__hover-description рамки из массива ясеня с панелью из МДФ, покрытой шпоном
+            .card__hover-group
+              h3.card__hover-title Толщина фасада
+              p.card__hover-description 19 мм
+            .card__hover-group
+              h3.card__hover-title Виды фасадов  
+              p.card__hover-description глухой, стекло
+            .card__hover-group
+              h3.card__hover-title Отделка   
+              p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
+            .button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/4.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/4.jpg", type="image/webp")
@@ -67,7 +116,20 @@ section.catalogModels.catalogModels2
       .card__img
         .card__hover
           .card__hover-block
-            .button.card__hover-button.button--primary Подробнее
+            a(href="#").card__hover-calculator
+            .card__hover-group 
+              h3.card__hover-title Фасад 
+              p.card__hover-description рамки из массива ясеня с панелью из МДФ, покрытой шпоном
+            .card__hover-group
+              h3.card__hover-title Толщина фасада
+              p.card__hover-description 19 мм
+            .card__hover-group
+              h3.card__hover-title Виды фасадов  
+              p.card__hover-description глухой, стекло
+            .card__hover-group
+              h3.card__hover-title Отделка   
+              p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
+            .button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/5.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/5.jpg", type="image/webp")
@@ -82,7 +144,20 @@ section.catalogModels.catalogModels2
       .card__img
         .card__hover
           .card__hover-block
-           .button.card__hover-button.button--primary Подробнее
+            a(href="#").card__hover-calculator
+            .card__hover-group 
+              h3.card__hover-title Фасад 
+              p.card__hover-description рамки из массива ясеня с панелью из МДФ, покрытой шпоном
+            .card__hover-group
+              h3.card__hover-title Толщина фасада
+              p.card__hover-description 19 мм
+            .card__hover-group
+              h3.card__hover-title Виды фасадов  
+              p.card__hover-description глухой, стекло
+            .card__hover-group
+              h3.card__hover-title Отделка   
+              p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
+            .button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/1.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/1.jpg", type="image/webp")
@@ -92,52 +167,6 @@ section.catalogModels.catalogModels2
         span.card__info-name Bristel PRO
         span.card__info-price от 40 215 ₽/м²
       p.card__description Роскошная дворцовая классика
-
-    .card
-      .card__img
-        .card__hover
-          .card__hover-block
-           .button.card__hover-button.button--primary Подробнее
-        picture
-          source(media="(min-width: 320px)", srcset="assets/img/models/4.webp", type="image/webp")
-          source(media="(min-width: 320px)", srcset="assets/img/models/4.jpg", type="image/webp")
-          img(src="assets/img/models/4.jpg")
-        .card__label.card__label--sale 
-      .card__info
-        span.card__info-name Bristel PRO
-        span.card__info-price от 40 215 ₽/м²
-      p.card__description Роскошная дворцовая классика
-
-    .card
-      .card__img
-        .card__hover
-          .card__hover-block
-            .button.card__hover-button.button--primary Подробнее
-        picture
-          source(media="(min-width: 320px)", srcset="assets/img/models/5.webp", type="image/webp")
-          source(media="(min-width: 320px)", srcset="assets/img/models/5.jpg", type="image/webp")
-          img(src="assets/img/models/5.jpg")
-        .card__label.card__label--sale 
-      .card__info
-        span.card__info-name Bristel PRO
-        span.card__info-price от 40 215 ₽/м²
-      p.card__description Роскошная дворцовая классика
-
-    .card
-      .card__img
-        .card__hover
-          .card__hover-block
-            .button.card__hover-button.button--primary Подробнее
-        picture
-          source(media="(min-width: 320px)", srcset="assets/img/models/5.webp", type="image/webp")
-          source(media="(min-width: 320px)", srcset="assets/img/models/5.jpg", type="image/webp")
-          img(src="assets/img/models/5.jpg")
-        .card__label.card__label--sale 
-      .card__info
-        span.card__info-name Bristel PRO
-        span.card__info-price от 40 215 ₽/м²
-      p.card__description Роскошная дворцовая классика
-
       
 
     
