--- a/src/views/_includes/blocks/filter.pug
+++ b/src/views/_includes/blocks/filter.pug
@@ -64,11 +64,11 @@ section.filter
                     
                     .filter__expand-type.type
                         span.filter__expand-label Сначала
-                        .type__item.type__item--active 
-                            span.active-text Новинки
-                            .type-list
-                                span.type__item Пункт 2
-                                span.type__item Пункт 3
+                        .type__select
+                            span.type__option.type__option-selected Новинки
+                            .type__block
+                                span.type__option Пункт 2
+                                span.type__option Пункт 3
 
 
 
