--- a/src/scss/components/catalog/_filter.scss
+++ b/src/scss/components/catalog/_filter.scss
@@ -402,10 +402,15 @@
             top: 5px;
             position: absolute;
             right: 0px;
+            transition: transform 0.2s ease-in-out;
+        }
+
+        &--active {
+            &::after {
+                transform: rotate(180deg);
+            }
         }
     }
-
-
 
     &__block {
         max-height: 0;
@@ -416,7 +421,7 @@
         display: flex;
         flex-direction: column;
         background-color: #fff;
-        transition: max-height 0.2s ease-in-out;
+        transition: max-height 0.1s ease-in-out;
     }
 
     &__option {
